tdf#130708: Firebird: fix wrong precision and scale for DECIMAL and NUMERIC

See https://firebirdsql.org/file/documentation/reference_manuals/fblangref25-en/html/fblangref25-datatypes.html

Change-Id: I2377679bb925425ceb0bf80c5309005421fe2c2b