connectivity/source/drivers/firebird/DatabaseMetaData.cxx
@@ -935,16 +935,16 @@ uno::Reference< XResultSet > SAL_CALL ODatabaseMetaData::getTypeInfo()
         // Numeric
         aRow[1] = new ORowSetValueDecorator(OUString("NUMERIC"));
         aRow[2] = new ORowSetValueDecorator(DataType::NUMERIC);
-        aRow[3] = new ORowSetValueDecorator(sal_Int16(15)); // Precision
-        aRow[14] = new ORowSetValueDecorator(sal_Int16(1)); // Minimum scale
-        aRow[15] = new ORowSetValueDecorator(sal_Int16(15)); // Max scale
+        aRow[3] = new ORowSetValueDecorator(sal_Int16(18)); // Precision
+        aRow[14] = new ORowSetValueDecorator(sal_Int16(0)); // Minimum scale
+        aRow[15] = new ORowSetValueDecorator(sal_Int16(18)); // Max scale
         tmp.push_back(aRow);
         // Decimal
         aRow[1] = new ORowSetValueDecorator(OUString("DECIMAL"));
         aRow[2] = new ORowSetValueDecorator(DataType::DECIMAL);
-        aRow[3] = new ORowSetValueDecorator(sal_Int16(15)); // Precision
-        aRow[14] = new ORowSetValueDecorator(sal_Int16(1)); // Minimum scale
-        aRow[15] = new ORowSetValueDecorator(sal_Int16(15)); // Max scale
+        aRow[3] = new ORowSetValueDecorator(sal_Int16(18)); // Precision
+        aRow[14] = new ORowSetValueDecorator(sal_Int16(0)); // Minimum scale
+        aRow[15] = new ORowSetValueDecorator(sal_Int16(18)); // Max scale
         tmp.push_back(aRow);
 
         aRow[6] = new ORowSetValueDecorator(); // Create Params
